# claude-token-saver

./: .gitignore  ADAPTIVE.md  BEST_PRACTICES.md  CLAUDE_SNIPPET.md  CONSOLIDATION_REPORT.md  HYPERSTACK.md  README.md  RTK.md  SPEC.md  TOOLS_GUIDE.md  UTS.md  WEBFETCH_PARITY.md  build-skills-index.py  cts.md  install-hyperstack.sh  install-universal.sh  install.sh  package.json  pyproject.toml  skills-index-session.sh  sm.md
.gg/plans/: universal-cli-support.md
adapters/: claude-code.ts  codex.ts  gemini-cli.ts  ggcoder.ts  hermes.ts  hyperstack.ts  index.ts  kilo-code.ts  kimi-cli.ts  synapse_memory.py
bench/: META_PROMPT.md  RESULTS.md  bench_profitanalyser.py  eval_harness.py  profitanalyser_results.json  results.json  run.py
bench/results/: eval_20260426T204050Z.json  eval_multimodel_20260427T190108Z.json  eval_openrouter_20260426T211543Z.json  eval_openrouter_20260426T212520Z.json  eval_verbose_20260426T204304Z.json
cli/: cts_doctor.py  uts-dashboard.ts
core/: adapter-interface.ts  adaptive-model.ts  adaptive_router.py  agent-teams.ts  cache_middleware.py  cache_replay.py  gemma-gate.py  host_memory.py  ml-filter.py  ml-train.py  orchestrator.py  reflection.py  tiered_routing_demo.py  tool_registry.py  usage_logger.py
cts_mcp/: cts_mcp_server.py
docs/: cc-features-detail.md  tools-and-rss-2026-05.md
hooks/: pretooluse_backfire.py
plugins/: dsh-cli.py  output-filter.js  rtk-universal.sh  team-sandbox.sh
rust/token-guard/: Cargo.toml
rust/token-guard/src/: lib.rs  main.rs
tests/: test_adaptive_router.py  test_cache_middleware.py
(+4 files in other folders)
