[package]
name = "token-guard"
version = "0.1.0"
edition = "2024"
authors = ["Maxim Supersynergy <true@supersynergy.de>"]
description = "Token safety router for Claude agent teams — Rust port"

[[bin]]
name = "token-guard"
path = "src/main.rs"

[lib]
name = "token_guard"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
